Extract TTPC question hints into translation strings
To be consistent with the other question hints in this journey.

--- a/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
@@ -14,7 +14,7 @@
           </legend>
           <%= display_error(@journey, :contract_start) %>
           <span id="contract-start-hint" class="govuk-hint">
-            For example, 31 3 1980
+            <%= t('.question_hint') %>
           </span>
           <div class="govuk-date-input" id="contract-start">
             <div class="govuk-date-input__item">
