--- a/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
@@ -14,7 +14,7 @@
           </legend>
           <%= display_error(@journey, :hire_date) %>
           <span id="hire-date-hint" class="govuk-hint">
-            For example, 31 3 1980
+            <%= t('.question_hint') %>
           </span>
           <div class="govuk-date-input" id="hire-date">
             <div class="govuk-date-input__item">
