--- a/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
@@ -22,7 +22,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_day">
                   Day
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="contract_start_day" name="contract_start_day" type="number" pattern="[0-9]*">
+                <%= number_field_tag :contract_start_day, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-2] %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -30,7 +30,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_month">
                   Month
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="contract_start_month" name="contract_start_month" type="number" pattern="[0-9]*">
+                <%= number_field_tag :contract_start_month, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-2] %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -38,7 +38,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_year">
                   Year
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="contract_start_year" name="contract_start_year" type="number" pattern="[0-9]*">
+                <%= number_field_tag :contract_start_year, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-4] %>
               </div>
             </div>
           </div>
