--- a/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
@@ -22,7 +22,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_day">
                   Day
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="hire_date_day" name="hire_date_day" type="number" pattern="[0-9]*">
+                <%= number_field_tag :hire_date_day, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-2] %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -30,7 +30,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_month">
                   Month
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="hire_date_month" name="hire_date_month" type="number" pattern="[0-9]*">
+                <%= number_field_tag :hire_date_month, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-2] %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -38,7 +38,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_year">
                   Year
                 </label>
-                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="hire_date_year" name="hire_date_year" type="number" pattern="[0-9]*">
+                <%= number_field_tag :hire_date_year, nil, pattern: '[0-9]*', class: %w[govuk-input govuk-date-input__input govuk-input--width-4] %>
               </div>
             </div>
           </div>
