--- a/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
@@ -24,7 +24,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_day">
                   Day
                 </label>
-                <%= number_field_tag :hire_date_day, nil, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= number_field_tag :hire_date_day, @journey.current_step.hire_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -32,7 +32,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_month">
                   Month
                 </label>
-                <%= number_field_tag :hire_date_month, nil, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= number_field_tag :hire_date_month, @journey.current_step.hire_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -40,7 +40,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_year">
                   Year
                 </label>
-                <%= number_field_tag :hire_date_year, nil, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= number_field_tag :hire_date_year, @journey.current_step.hire_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
