--- a/app/views/temp_to_perm_calculator/home/fee.html.erb
+++ b/app/views/temp_to_perm_calculator/home/fee.html.erb
@@ -1,16 +1,19 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
-    <div class="govuk-panel govuk-panel--confirmation">
-      <h1 class="govuk-panel__title">
-        <%= t('.header') %>
-      </h1>
-      <div class="govuk-panel__body">
-        <%= t('.panel_body') %>
-        <br><strong><%= number_to_currency(@calculator.early_hire_fee) %></strong>
+    <div class="govuk-grid-column-full">
+      <div class="govuk-panel govuk-panel--confirmation">
+        <h1 class="govuk-panel__title">
+          <%= t('.header') %>
+        </h1>
+        <div class="govuk-panel__body">
+          <%= t('.panel_body') %>
+          <br><strong><%= number_to_currency(@calculator.early_hire_fee) %></strong>
+        </div>
       </div>
     </div>
-
-    <div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       <h2>Explanation</h2>
       <% if @calculator.before_national_deal_began? %>
       <p>The contract start date you have given, <%= @calculator.contract_start_date.to_formatted_s(:long) %>, is before the National Deal was awarded. The terms of the deal may not apply to this worker, unless you have since agreed with the supplier that they should.</p>
