--- a/app/views/supply_teachers/journey/looking_for.html.erb
+++ b/app/views/supply_teachers/journey/looking_for.html.erb
@@ -22,6 +22,10 @@
               <%= radio_button_tag :looking_for, :managed_service_provider, checked?(params[:looking_for], 'managed_service_provider'), class: 'govuk-radios__input' %>
               <%= label_tag :looking_for_managed_service_provider, t('.answer_managed_service_provider'), class: 'govuk-label govuk-radios__label' %>
             </div>
+            <div class="govuk-radios__item">
+              <%= radio_button_tag :looking_for, :calculate_temp_to_perm_fee, checked?(params[:looking_for], 'calculate_temp_to_perm_fee'), class: 'govuk-radios__input' %>
+              <%= label_tag :looking_for_calculate_temp_to_perm_fee, t('.answer_calculate_temp_to_perm_fee'), class: 'govuk-label govuk-radios__label' %>
+            </div>
           </div>
         <% end %>
       <% end %>
