--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -10,7 +10,7 @@
         <li>find and hire a worker, using an agency</li>
         <li>hire a specific person (a ‘nominated worker’)</li>
         <li>find a managed service provider, who can take on all your temporary staff needs</li>
-        <li>create a shortlist of suppliers based on your needs and download or save it</li>
+        <li>create a shortlist of suppliers based on your needs and download it</li>
       </ul>
 
       <%= link_to 'Start now', journey_start_url(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
