(fix) added accreditation message to start page

--- a/app/assets/stylesheets/components/typography/_typography.scss
+++ b/app/assets/stylesheets/components/typography/_typography.scss
@@ -13,3 +13,6 @@ strong {
 .govuk-heading-s {
 	font-weight: $govuk-font-weight-semi-bold;
 }
+.cmp-start-page__sub-heading {
+	margin-top: 40px;
+}
