--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -1,10 +1,10 @@
-<div class="govuk-body">
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">Find supply teachers and agency workers</h1>
 
-      <p>Use this service to:</p>
+      <p class="govuk-body">Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>find and hire a worker, using an agency</li>
@@ -17,18 +17,22 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>To use the service, you will need to register for an account and get login details.</p>
+      <p class="govuk-body">To use the service, you will need to register for an account and get login details.</p>
 
-      <p>You will also need to have:</p>
+      <p class="govuk-body">You will also need to have:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>your school’s postcode</li>
         <li>details of how long you will want the worker</li>
       </ul>
 
-      <p>You can’t use this service if you’re an independent school, unless you have charitable status.</p>
+      <p class="govuk-body">You can’t use this service if you’re an independent school, unless you have charitable status.</p>
 
-      <p>To find permanent teaching staff, use the <a href="https://teaching-jobs.service.gov.uk/">Teaching Jobs</a> service.</p>
+      <p class="govuk-body">To find permanent teaching staff, use the <a href="https://teaching-jobs.service.gov.uk/">Teaching Jobs</a> service.</p>
+
+      <h2 class="govuk-heading-m cmp-start-page__sub-heading">Accreditation of suppliers</h2>
+
+      <p class="govuk-body">All suppliers have undergone background screening and safeguarding to DfE's Keeping Children Safe in Education standards. They are audited and accredited against best practice standards in education recruitment.</p>
+
     </div>
   </div>
-</div>
