--- a/app/views/supply_teachers/journey/contract_start.html.erb
+++ b/app/views/supply_teachers/journey/contract_start.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
+    <%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
     <%= form_tag @form_path, method: :get do %>
       <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
       <%= govuk_form_group_with_optional_error(@journey, :contract_start_day, :contract_start_month, :contract_start_year) do %>
