--- a/app/views/supply_teachers/journey/managed_service_provider.html.erb
+++ b/app/views/supply_teachers/journey/managed_service_provider.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
   <%= add_optional_error_prefix_to_page_title(@journey.errors) %>
 
-  <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
+  <%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
   <%= form_tag @form_path, method: :get do %>
     <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
     <%= govuk_form_group_with_optional_error(@journey, :managed_service_provider) do %>
