Link back to main CCS site from header logo
Once we've split out the three frameworks, there won't be a home page
any more.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <div class="govuk-header__container govuk-width-container">
 
         <div class="govuk-header__logo">
-          <a href="/" class="govuk-header__link govuk-header__link--homepage" aria-label="Crown Marketplace homepage">
+          <a href="<%= ccs_homepage_url %>" class="govuk-header__link govuk-header__link--homepage" aria-label="Crown Commercial Service homepage">
             <span class="govuk-header__logotype">
               <%= render partial: '/layouts/logotype' %>
             </span>
