(fix) mark-up explanation added

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -37,6 +37,8 @@ $govuk-colours: (
   "grey-4": #f8f8f8,
   "grey-5": #eeeeee,
   "white": #ffffff,
+  "green-2": #F0FFF1,
+  "green-3": #006435,
 
   "link": #007194,
   "link-hover": #15a0cc,
