Hide back and distance links when printing suppliers page.
Adds ccs-no-print css class to back and distance links when
printing.

Again, it would be good to have some way to prevent regressions
here without manual QA being needed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
         </div>
       </div>
       <% if @back_path.present? %>
-        <%= link_to t('.back'), @back_path, class: 'govuk-back-link' %>
+        <%= link_to t('.back'), @back_path, class: 'govuk-back-link ccs-no-print' %>
       <% end %>
       <main class="govuk-main-wrapper" id="main-content" role="main">
         <%= yield %>
