--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= render partial: '/shared/google_analytics' %>
 </head>
 
 <body class="govuk-template__body">
