Partially update DfE sign-in copy
To complete this, we need a link to self-service account creation.

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -17,7 +17,9 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p class="govuk-body">To use the service, you will need to register for an account and get login details.</p>
+      <p class="govuk-body">
+        To use the service, you will need your DFE Sign-in email and password.
+      </p>
 
       <p class="govuk-body">You will also need to have:</p>
 
