(fix) added pound sign to the day rate input

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -17,6 +17,7 @@
 /* Override with my own components */
 @import "back-link/back-link";
 @import "button/button";
+@import "calculator-form/calculator-form";
 @import "details/details";
 @import "error-message/error-message";
 @import "error-summary/error-summary";
