--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -4,7 +4,7 @@
 
       <h1 class="govuk-heading-xl">CCS Marketplace private beta</h1>
 
-      <p><%= t('.cmp_support_email_html', link: govuk_email_link(Marketplace.support_email_address, t('.cmp_support_aria_label'))) %></p>
+      <p><%= t('.cmp_support_email_html', link: support_email_link(t('.cmp_support_aria_label'))) %></p>
 
       <p>
         <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
