Add google analytics click tracking for crown logo
Add, with javascript, click handlers for google analytics
to elements that are tagged with specific ga-* css classes.

The first of these is the crown logo.

Also, creates a dummy scss file so that these classes have
less chance of being accidentally deleted.

--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -2,6 +2,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=<%= ENV['GA_TRACKING_ID'] %>"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
+window.gaTrackingId = '<%= ENV['GA_TRACKING_ID'] %>';
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', '<%= ENV['GA_TRACKING_ID'] %>', { 'anonymize_ip': true });
