--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <div class="govuk-header__container govuk-width-container">
 
         <div class="govuk-header__logo">
-          <a href="<%= ccs_homepage_url %>" class="govuk-header__link govuk-header__link--homepage" aria-label="Crown Commercial Service homepage">
+          <a href="<%= ccs_homepage_url %>" class="govuk-header__link govuk-header__link--homepage ga-crown-logo" aria-label="Crown Commercial Service homepage">
             <span class="govuk-header__logotype">
               <%= render partial: '/layouts/logotype' %>
             </span>
