Tag support and feedback email links with GA

--- a/app/assets/stylesheets/components/analytics.scss
+++ b/app/assets/stylesheets/components/analytics.scss
@@ -1,4 +1,6 @@
-.ga-crown-logo
+.ga-crown-logo,
+.ga-feedback-mailto,
+.ga-support-mailto
 {
   // these classes are used by google analytics to mark external
   // links. Included here for documentation. See:
