--- a/app/assets/stylesheets/components/analytics.scss
+++ b/app/assets/stylesheets/components/analytics.scss
@@ -1,6 +1,9 @@
 .ga-crown-logo,
 .ga-feedback-mailto,
-.ga-support-mailto
+.ga-support-mailto,
+.ga-print-link,
+.ga-download-shortlist,
+.ga-download-calculator
 {
   // these classes are used by google analytics to mark external
   // links. Included here for documentation. See:
