--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -52,14 +52,14 @@
 <div class="govuk-grid-row ccs-no-print">
   <div class="govuk-grid-column-full">
     <p class="govuk-body supplier-record__print-option">
-      <a href="javascript:window.print()" class="govuk-link"><%= t('.print') %></a>
+      <a href="javascript:window.print()" class="govuk-link ga-print-link"><%= t('.print') %></a>
     </p>
     <p class="govuk-body supplier-record__print-option">
-      <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'supplier-record__file-download', 'aria-label': t('.download_aria_label') } %>
+      <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'supplier-record__file-download ga-download-shortlist', 'aria-label': t('.download_aria_label') } %>
     </p>
     <p class="govuk-body supplier-record__print-option">
       <% if link_to_calculator? %>
-      <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'supplier-record__file-download', 'aria-label': t('.download_with_calculator_aria_label') } %>
+      <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'supplier-record__file-download ga-download-calculator', 'aria-label': t('.download_with_calculator_aria_label') } %>
       <% end %>
     </p>
   </div>
