--- a/app/views/supply_teachers/journey/contract_start.html.erb
+++ b/app/views/supply_teachers/journey/contract_start.html.erb
@@ -130,7 +130,49 @@
           </div>
         <% end %>
       <% end %>
-      
+
+      <%= govuk_form_group_with_optional_error(@journey, :notice_date_day, :notice_date_month, :notice_date_year) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :notice_date_day, :notice_date_month, :notice_date_year) do %>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h1 class="govuk-fieldset__heading">
+              <%= t('.notice_date_question') %>
+            </h1>
+          </legend>
+          <%= display_error(@journey, :notice_date_day) %>
+          <%= display_error(@journey, :notice_date_month) %>
+          <%= display_error(@journey, :notice_date_year) %>
+          <span id="notice-date-hint" class="govuk-hint">
+            <%= t('.notice_date_question_hint') %>
+          </span>
+          <div class="govuk-date-input" id="notice-date">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="notice_date_day">
+                  Day
+                </label>
+                <%= number_field_tag :notice_date_day, @journey.current_step.notice_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="notice_date_month">
+                  Month
+                </label>
+                <%= number_field_tag :notice_date_month, @journey.current_step.notice_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="notice_date_year">
+                  Year
+                </label>
+                <%= number_field_tag :notice_date_year, @journey.current_step.notice_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+
       <%= submit_tag t('common.submit'), class: "govuk-button" %>
     <% end %>
   </div>
