Add GA for cognito and dfe sign in links

--- a/app/assets/stylesheets/components/analytics.scss
+++ b/app/assets/stylesheets/components/analytics.scss
@@ -1,6 +1,8 @@
 .ga-crown-logo,
 .ga-feedback-mailto,
 .ga-support-mailto,
+.ga-auth-cognito,
+.ga-auth-dfe,
 .ga-print-link,
 .ga-download-shortlist,
 .ga-download-calculator
