--- a/app/views/facilities_management/gateway/index.html.erb
+++ b/app/views/facilities_management/gateway/index.html.erb
@@ -7,7 +7,7 @@
       <p><%= t('.cmp_support_email_html', link: support_email_link(t('.cmp_support_aria_label'))) %></p>
 
       <p>
-        <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+        <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-cognito' %>
       </p>
     </div>
   </div>
