--- a/app/views/supply_teachers/gateway/index.html.erb
+++ b/app/views/supply_teachers/gateway/index.html.erb
@@ -7,9 +7,9 @@
       <p><%= t('.cmp_support_email_html', link: support_email_link(t('.cmp_support_aria_label'))) %></p>
 
       <p>
-        <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+        <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-cognito' %>
         <% if DFE_SIGNIN_ENABLED %>
-          <%= link_to 'Sign in with DfE Sign-in', dfe_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+          <%= link_to 'Sign in with DfE Sign-in', dfe_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8 ga-auth-dfe' %>
         <% end %>
       </p>
     </div>
