--- a/app/views/supply_teachers/home/fee.html.erb
+++ b/app/views/supply_teachers/home/fee.html.erb
@@ -7,7 +7,7 @@
         </h1>
         <div class="govuk-panel__body">
           <%= t('.panel_body') %>
-          <br><strong><%= number_to_currency(@calculator.early_hire_fee) %></strong>
+          <br><strong><%= number_to_currency(@calculator.fee) %></strong>
           <% if @calculator.notice_period_required? %>
             <br>
             Provided you give notice on or before <%= @calculator.notice_date_based_on_hire_date.to_formatted_s(:long) %>
