--- a/app/views/supply_teachers/journey/contract_start.html.erb
+++ b/app/views/supply_teachers/journey/contract_start.html.erb
@@ -24,7 +24,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_day">
                   Day
                 </label>
-                <%= number_field_tag :contract_start_day, @journey.current_step.contract_start_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :contract_start_day, @journey.current_step.contract_start_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_day, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -32,7 +32,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_month">
                   Month
                 </label>
-                <%= number_field_tag :contract_start_month, @journey.current_step.contract_start_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :contract_start_month, @journey.current_step.contract_start_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_month, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -40,7 +40,7 @@
                 <label class="govuk-label govuk-date-input__label" for="contract_start_year">
                   Year
                 </label>
-                <%= number_field_tag :contract_start_year, @journey.current_step.contract_start_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :contract_start_year, @journey.current_step.contract_start_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_year, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_day">
                   Day
                 </label>
-                <%= number_field_tag :hire_date_day, @journey.current_step.hire_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :hire_date_day, @journey.current_step.hire_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -116,7 +116,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_month">
                   Month
                 </label>
-                <%= number_field_tag :hire_date_month, @journey.current_step.hire_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :hire_date_month, @journey.current_step.hire_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -124,7 +124,7 @@
                 <label class="govuk-label govuk-date-input__label" for="hire_date_year">
                   Year
                 </label>
-                <%= number_field_tag :hire_date_year, @journey.current_step.hire_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :hire_date_year, @journey.current_step.hire_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 <label class="govuk-label govuk-date-input__label" for="notice_date_day">
                   Day
                 </label>
-                <%= number_field_tag :notice_date_day, @journey.current_step.notice_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :notice_date_day, @journey.current_step.notice_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -158,7 +158,7 @@
                 <label class="govuk-label govuk-date-input__label" for="notice_date_month">
                   Month
                 </label>
-                <%= number_field_tag :notice_date_month, @journey.current_step.notice_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :notice_date_month, @journey.current_step.notice_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -166,7 +166,7 @@
                 <label class="govuk-label govuk-date-input__label" for="notice_date_year">
                   Year
                 </label>
-                <%= number_field_tag :notice_date_year, @journey.current_step.notice_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :notice_date_year, @journey.current_step.notice_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :notice_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
