--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -1,3 +1,6 @@
+<%= content_for :page_title, 'Supplier list' %>
+<%= content_for :page_section, 'Find supply teachers and agency workers' %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
