--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :page_section, 'Find supply teachers and agency workers' %>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
