--- a/app/views/supply_teachers/journey/looking_for.html.erb
+++ b/app/views/supply_teachers/journey/looking_for.html.erb
@@ -1,4 +1,6 @@
 <%= add_optional_error_prefix_to_page_title(@journey.errors) %>
+<%= content_for :page_title, 'What are you looking for?' %>
+<%= content_for :page_section, 'Find supply teachers and agency workers' %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
