--- a/app/views/supply_teachers/journey/managed_service_provider.html.erb
+++ b/app/views/supply_teachers/journey/managed_service_provider.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :page_title, 'What type of managed service do you want?' %>
+<%= content_for :page_section, 'Find supply teachers and agency workers' %>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
   <%= add_optional_error_prefix_to_page_title(@journey.errors) %>
