--- a/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
+++ b/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :page_title, 'Neutral vendor managed service providers' %>
+<%= content_for :page_section, 'Find supply teachers and agency workers' %>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
