--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -1,5 +1,5 @@
-<%= content_for :page_title, 'Supplier list' %>
-<%= content_for :page_section, 'Find supply teachers and agency workers' %>
+<%= content_for :page_title, t('.page_title')  %>
+<%= content_for :page_section, t('supply_teachers.page_section') %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
