--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_section, 'Find supply teachers and agency workers' %>
+<%= content_for :page_section, t('supply_teachers.page_section') %>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
