Add anchor for generic hire_date validation error
This should've been added in this commit [1].

Note that there's no easy way to add the `govuk-input--error` CSS class
to *all three* `hire_date` fields, so I haven't done so for now. I
believe @chrisroos is working on adding more validation for the
combination of the three date fields and so I suspect he'll have to deal
with this problem then.

[1]: d16dcb86e214f6402b07326320f9e47da4821519

--- a/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
+++ b/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
@@ -87,14 +87,14 @@
         <%= text_field_tag :markup_rate, params[:markup_rate], class: css_classes_for_input(@journey, :markup_rate, ['govuk-input--width-10']) %>
       <% end %>
 
-      <%= govuk_form_group_with_optional_error(@journey, :hire_date_day, :hire_date_month, :hire_date_year) do %>
-        <%= govuk_fieldset_with_optional_error(@journey, :hire_date_day, :hire_date_month, :hire_date_year) do %>
+      <%= govuk_form_group_with_optional_error(@journey, :hire_date, :hire_date_day, :hire_date_month, :hire_date_year) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :hire_date, :hire_date_day, :hire_date_month, :hire_date_year) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               <%= t('.hire_date_question') %>
             </h1>
           </legend>
-          <%= display_errors(@journey, :hire_date_day, :hire_date_month, :hire_date_year) %>
+          <%= display_errors(@journey, :hire_date, :hire_date_day, :hire_date_month, :hire_date_year) %>
           <span id="hire-date-hint" class="govuk-hint">
             <%= t('.hire_date_question_hint') %>
           </span>
