Add support phone number alongside email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,9 +91,10 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
               <p class="govuk-!-margin-bottom-0 govuk-body-s">
-                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span> <%=
-    email_link = support_email_link(t('.support_aria_label'))
-    t('.support_email_html', link: email_link) %>
+                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span>
+                <%= t('.support_html',
+                      link: support_email_link(t('.support_link_aria_label')),
+                      phone: support_telephone_number) %>
               </p>
             </div>
           </div>
